platform/tekton-pipelines/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  labels:
    cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
spec:
  rules:
  - host: tekton.flowgenie.de
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: tekton-dashboard
            port:
              name: http
  tls:
  - hosts:
    - tekton.flowgenie.de
    secretName: tekton-tls-certificate
